<resources>
    <string name="app_name">Spotify</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_favorite_artists">Your favorite artists</string>
    <string name="recently_played">Recently played</string>
    <string name="new_releases">New releases</string>
    <string name="search">Search</string>
    <string name="search_songs">Search your favorite songs...</string>
    <string name="browse_all">Browse all</string>
    <string name="popular">Popular</string>
    <string name="albums">Albums</string>
    <string name="premium">Try Premium free for 1 month</string>
    <string name="get_premium">GET PREMIUM</string>
    <string name="login">Login</string>
    <string name="spotify">Spotify</string>
</resources>
