<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/gradient"
        android:id="@+id/relative"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_marginStart="20dp"
            android:textSize="27sp"
            android:fontFamily="@font/prox_eb"
            android:textColor="@color/colorAccent"
            android:text="@string/new_releases"
            android:layout_alignParentTop="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/firstRecyclerView"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="45dp"
            android:visibility="invisible"
            android:layout_marginStart="20dp"
            android:textSize="27sp"
            android:fontFamily="@font/prox_eb"
            android:textColor="@color/colorAccent"
            android:text="@string/recently_played"
            android:layout_below="@id/firstRecyclerView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/secondRecyclerView"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:textSize="27sp"
            android:visibility="invisible"
            android:fontFamily="@font/prox_eb"
            android:textColor="@color/colorAccent"
            android:text="@string/your_favorite_artists"
            android:layout_below="@id/secondRecyclerView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/thirdRecyclerView"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"/>

    </RelativeLayout>
</ScrollView>
